# terminal_words

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: sw.rb  terminal_words.rb
src/: main.rs
